# Nimble-Engine

./: .gitignore  Builder.py  Formatting.md  LICENSE.md  LicenseGenerator.py  NimbleLicenseGenerator.py  README.md  ReleaseBuilder.py  bugs.md
Nimble Debugger/: CMakeLists.txt  README.md
Nimble Engine Application/: CMakeLists.txt  README.md
Nimble Engine Application/src/: main.c
Nimble Engine Library/: CMakeLists.txt  README.md
Nimble Engine Library/include/Nimble/: Nimble.h  NimbleEngine.h  NimbleLicense.h
Nimble Engine Library/include/Nimble/Errors/: Crash.h  ErrorValues.h  Errors.h
Nimble Engine Library/include/Nimble/Graphics/: NimbleDirectX11.h  NimbleDirectX12.h  NimbleOpenGL.h  NimbleVulkan.h
Nimble Engine Library/include/Nimble/Output/: Files.h
Nimble Engine Library/include/Nimble/System/: CPUInfo.h  Library.h  Memory.h  Threads.h  Time.h
Nimble Engine Library/src/: NimbleEngine.c  NimbleLicense.c
Nimble Engine Library/src/Errors/: Crash.c  ErrorValues.c  Errors.c
Nimble Engine Library/src/Graphics/DirectX11/: Hardware.c  Overlay.c  Render.c  Shaders.c  Window.c  WindowEvents.c
Nimble Engine Library/src/Graphics/DirectX12/: Hardware.c  Overlay.c  Render.c  Shaders.c  Window.c  WindowEvents.c
Nimble Engine Library/src/Graphics/OpenGL/: Hardware.c  Overlay.c  Render.c  Shaders.c  Window.c  WindowEvents.c
Nimble Engine Library/src/Graphics/Vulkan/: Hardware.c  Overlay.c  Render.c  Shaders.c  Window.c  WindowEvents.c
Nimble Engine Library/src/Output/: Files.c
Nimble Engine Library/src/Output/Errors/: Crash.c  ErrorValues.c  Errors.c
Nimble Engine Library/src/System/: CPUInfo.c  Library.c  Memory.c  Threads.c  Time.c
Nimble Game Engine Application/: CMakeLists.txt  README.md
Nimble Game Engine Application/src/: main.c
Nimble Game Engine Library/: CMakeLists.txt  README.md
Nimble Game Engine Library/docs/: Doxyfile
Nimble Game Engine Library/docs/html/: _big_number_8c.html  _big_number_8c_source.html  _big_number_8h.html  _big_number_8h_source.html  _boids_8c.html  _boids_8c_source.html  _boids_8h.html  _boids_8h_source.html  _collisions_8c.html  _collisions_8c_source.html  _collisions_8h.html  _collisions_8h_source.html  _crash_handler_8c.html  _crash_handler_8c_source.html  _crash_handler_8h.html  _crash_handler_8h_source.html  _direct_x11_2_overlay_8c.html  _direct_x11_2_overlay_8c_source.html  _direct_x11_2_overlay_8h.html  _direct_x11_2_overlay_8h_source.html  _direct_x11_2_render_8c.html  _direct_x11_2_render_8c_source.html  _direct_x11_2_render_8h.html  _direct_x11_2_render_8h_source.html  _direct_x11_2_shaders_8c.html  _direct_x11_2_shaders_8c_source.html  _direct_x11_2_shaders_8h.html  _direct_x11_2_shaders_8h_source.html  _direct_x11_2_window_8c.html  _direct_x11_2_window_8c_source.html  _direct_x11_2_window_8h.html  _direct_x11_2_window_8h_source.html  _direct_x11_2_window_events_8c.html  _direct_x11_2_window_events_8c_source.html  _direct_x11_2_window_events_8h.html  _direct_x11_2_window_events_8h_source.html  _direct_x12_2_overlay_8c.html  _direct_x12_2_overlay_8c_source.html  _direct_x12_2_overlay_8h.html  _direct_x12_2_overlay_8h_source.html  (+207 more)
Nimble Game Engine Library/docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_10.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  files_d.js  files_e.js  files_f.js  functions_0.js  functions_1.js  (+8 more)
Nimble Game Engine Library/docs/latex/: _big_number_8c.tex  _big_number_8h.tex  _boids_8c.tex  _boids_8h.tex  _collisions_8c.tex  _collisions_8h.tex  _crash_handler_8c.tex  _crash_handler_8h.tex  _direct_x11_2_overlay_8c.tex  _direct_x11_2_overlay_8h.tex  _direct_x11_2_render_8c.tex  _direct_x11_2_render_8h.tex  _direct_x11_2_shaders_8c.tex  _direct_x11_2_shaders_8h.tex  _direct_x11_2_window_8c.tex  _direct_x11_2_window_8h.tex  _direct_x11_2_window_events_8c.tex  _direct_x11_2_window_events_8h.tex  _direct_x12_2_overlay_8c.tex  _direct_x12_2_overlay_8h.tex  _direct_x12_2_render_8c.tex  _direct_x12_2_render_8h.tex  _direct_x12_2_shaders_8c.tex  _direct_x12_2_shaders_8h.tex  _direct_x12_2_window_8c.tex  _direct_x12_2_window_8h.tex  _direct_x12_2_window_events_8c.tex  _direct_x12_2_window_events_8h.tex  _error_handler_8c.tex  _error_handler_8h.tex  _errors_8c.tex  _errors_8h.tex  _files_8c.tex  _files_8h.tex  _gravity_8c.tex  _gravity_8h.tex  _lighting_8c.tex  _lighting_8h.tex  _logging_8c.tex  _logging_8h.tex  (+98 more)
Nimble Game Engine Library/docs/man/man3/: BigNumber.c.3  BigNumber.h.3  Boids.c.3  Boids.h.3  C__Users_Avery_Desktop_Nimble Game Engine_Nimble Game Engine Library_include_.3  C__Users_Avery_Desktop_Nimble Game Engine_Nimble Game Engine Library_include_Nimble_.3  C__Users_Avery_Desktop_Nimble Game Engine_Nimble Game Engine Library_include_Nimble_NimbleEngine_.3  C__Users_Avery_Desktop_Nimble Game Engine_Nimble Game Engine Library_include_Nimble_NimbleEngine_Game_.3  C__Users_Avery_Desktop_Nimble Game Engine_Nimble Game Engine Library_include_Nimble_NimbleEngine_Game_AI_.3  C__Users_Avery_Desktop_Nimble Game Engine_Nimble Game Engine Library_include_Nimble_NimbleEngine_Game_Objects_.3  C__Users_Avery_Desktop_Nimble Game Engine_Nimble Game Engine Library_include_Nimble_NimbleEngine_Game_Physics_.3  Collisions.c.3  Collisions.h.3  CrashHandler.c.3  (+83 more)
Nimble Game Engine Library/include/Nimble/: Nimble.h  NimbleDirectX11.h  NimbleDirectX12.h  NimbleEngine.h  NimbleLicense.h  NimbleOpenGL.h  NimbleVulkan.h
Nimble Game Engine Library/src/: Nimble.h  NimbleDirectX11.h  NimbleDirectX12.h  NimbleEngine.c  NimbleEngine.h  NimbleLicense.c  NimbleOpenGL.h  NimbleVulkan.h
Nimble Game Engine Library/src/Output/: CrashHandler.c  Errors.c  Files.c
Nimble Game Engine Library/src/System/: CPUInfo.c  Hardware.c  Memory.c  Threads.c
Nimble Level Editor/: CMakeLists.txt  README.md
(+731 files in other folders)
